feat: implemented dashboard
